<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/large_margin"
    android:layout_marginEnd="@dimen/large_margin">

    <TextView
        android:id="@+id/textview_title_add_foods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/title_add_food"
        android:textSize="@dimen/x_large_font"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_subtitle_add_foods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_add_food"
        app:layout_constraintStart_toStartOf="@id/textview_title_add_foods"
        app:layout_constraintTop_toBottomOf="@id/textview_title_add_foods" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_tag_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:hint="@string/text_food"
        app:layout_constraintStart_toStartOf="@id/textview_subtitle_add_foods"
        app:layout_constraintTop_toBottomOf="@id/textview_subtitle_add_foods">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_tag_type_food"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/text_selected_hint"
        app:layout_constraintStart_toStartOf="@id/campo_tag_food_name"
        app:layout_constraintTop_toBottomOf="@id/campo_tag_food_name">

        <AutoCompleteTextView
            android:id="@+id/spinner_type_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/spinner_option_type_food"
            tools:ignore="LabelFor,TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textview_title_recommend_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/text_recommended_for"
        android:textSize="@dimen/average_font"
        app:layout_constraintStart_toStartOf="@id/campo_tag_type_food"
        app:layout_constraintTop_toBottomOf="@id/campo_tag_type_food" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_option_diabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_margin"
        android:checked="false"
        android:text="@string/text_diabetes"
        android:textSize="@dimen/x_small_font"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_title_recommend_for"
        app:switchPadding="2dp" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_option_colesterol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/text_cholesterol"
        android:textSize="@dimen/x_small_font"
        app:layout_constraintEnd_toStartOf="@+id/switch_option_hipertensao"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/switch_option_diabetes"
        app:layout_constraintTop_toTopOf="@id/switch_option_diabetes"
        app:switchPadding="2dp" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_option_hipertensao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/text_hypertension"
        android:textSize="@dimen/x_small_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="@id/switch_option_diabetes"
        app:switchPadding="2dp" />

    <TextView
        android:id="@+id/textview_title_values_nutritional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/text_nutritional_values"
        android:textSize="@dimen/average_font"
        app:layout_constraintStart_toStartOf="@id/switch_option_diabetes"
        app:layout_constraintTop_toBottomOf="@id/switch_option_diabetes" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_tag_qtd_carboidrato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_margin"
        android:hint="@string/text_carbohydrates"
        app:layout_constraintEnd_toStartOf="@+id/campo_tag_qtd_proteina"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_title_values_nutritional">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_qtd_carboidrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_tag_qtd_proteina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:hint="@string/text_proteins"
        app:layout_constraintEnd_toStartOf="@+id/campo_tag_qtd_gordTotal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/campo_tag_qtd_carboidrato"
        app:layout_constraintTop_toTopOf="@+id/campo_tag_qtd_carboidrato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_qtd_proteina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_tag_qtd_gordTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:hint="@string/text_total_fat"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/campo_tag_qtd_proteina"
        app:layout_constraintTop_toTopOf="@+id/campo_tag_qtd_proteina">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_qtd_gordTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white_100"
        android:text="@string/text_button_back"
        android:textColor="@color/red_default"
        app:layout_constraintBottom_toTopOf="@id/button_cadastrar_alimento"
        app:layout_constraintEnd_toEndOf="@id/button_cadastrar_alimento"
        app:layout_constraintStart_toStartOf="@id/button_cadastrar_alimento"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_cadastrar_alimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_margin"
        android:backgroundTint="@color/red_default"
        android:text="@string/text_button_register_food"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>