<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/large_margin"
    android:layout_marginEnd="@dimen/large_margin">

    <TextView
        android:id="@+id/textview_title_yours_patients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_yours_patients"
        android:textSize="@dimen/x_large_font"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_subtitle_yours_patients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_yours_patients"
        app:layout_constraintStart_toStartOf="@id/textview_title_yours_patients"
        app:layout_constraintTop_toBottomOf="@id/textview_title_yours_patients" />

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar_yours_patients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-1dp"
        android:hint="@string/text_search_food_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textview_subtitle_yours_patients"
        app:layout_constraintTop_toBottomOf="@id/textview_subtitle_yours_patients"
        tools:ignore="VisualLintBounds,SpeakableTextPresentCheck" />

    <include
        android:id="@+id/include_comorbidades_legends_fragment_yours_patients"
        layout="@layout/layout_comorbidades_legendas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar_yours_patients" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_yours_patients"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_comorbidades_legends_fragment_yours_patients"
        tools:listitem="@layout/item_recycler_view_yours_patients" />

</androidx.constraintlayout.widget.ConstraintLayout>